Partial_14Dec2021/force-app/main/default/objects/Territory_Contractors__c/Territory_Contractors__c.object-meta.xml
<CustomObject>
    <label>Territory Contractors</label>
    <nameField>
        <label>Territory Contractors Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territory Contractors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>