Partial_14Dec2021/force-app/main/default/objects/Territory_Contractors__c/fields/Contractor__c.field-meta.xml
<CustomField>
    <fullName>Contractor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contractor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Territory_Contractors</relationshipName>
    <type>Lookup</type>
</CustomField>