Partial_14Dec2021/force-app/main/default/objects/Territory_Contractors__c/fields/SAP_Code_ship__c.field-meta.xml
<CustomField>
    <fullName>SAP_Code_ship__c</fullName>
    <label>SAP Code(ship)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>