Partial_14Dec2021/force-app/main/default/objects/Territory_Contractors__c/fields/SAP_Code_sold__c.field-meta.xml
<CustomField>
    <fullName>SAP_Code_sold__c</fullName>
    <label>SAP Code(sold)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>