Partial_14Dec2021/force-app/main/default/objects/Territory_Contractors__c/fields/Service_Territory__c.field-meta.xml
<CustomField>
    <fullName>Service_Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Territory</label>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>Territory Contractors</relationshipLabel>
    <relationshipName>Territory_Contractors</relationshipName>
    <type>Lookup</type>
</CustomField>