Partial_14Dec2021/force-app/main/default/objects/Territory_Contractors__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Service_Territory__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>